<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">
    <!--    Guideline helpers-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <!--    Items-->
    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:0.35"
        android:layout_marginTop="60dp"
        android:src="@drawable/tetris"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlayNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_purple_round_button"
        android:paddingVertical="20dp"
        android:text="@string/play_game"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/imgTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoadGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="20dp"
        android:text="@string/load_game"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:background="@drawable/custom_green_round_button"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayNew" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="20dp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:background="@drawable/custom_yellow_round_button"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadGame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="20dp"
        android:text="@string/view_high_scores"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:background="@drawable/custom_orange_round_button"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnSetting"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExitApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingVertical="20dp"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:background="@drawable/custom_red_round_button"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnViewScore"/>
</androidx.constraintlayout.widget.ConstraintLayout>