<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayOptionActivity">
    <!--    Guideline helpers-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <!--    Items-->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/play_game"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlayNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/new_game"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoadGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/load_game"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayNew"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadGame"/>
</androidx.constraintlayout.widget.ConstraintLayout>