<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".ViewHighScoreActivity">
    <!--    Guideline helpers-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_vertical_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <!--    Items-->
    <TextView
        android:id="@+id/txtTimeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/yellow_block"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/mid_vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_horizontal_guideline"/>

    <TextView
        android:id="@+id/txtNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/yellow_block"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/mid_vertical_guideline2"
        app:layout_constraintStart_toEndOf="@+id/txtTimeTitle"
        app:layout_constraintTop_toTopOf="@+id/txtTimeTitle"/>

    <TextView
        android:id="@+id/txtHighScoreTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/yellow_block"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNameTitle"
        app:layout_constraintTop_toTopOf="@+id/txtNameTitle"/>

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="7dp"
        android:background="@color/yellow_block"
        app:layout_constraintTop_toBottomOf="@id/txtNameTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/highScoreRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/black_50"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintTop_toBottomOf="@+id/topDivider"/>

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/yellow_block"
        app:layout_constraintTop_toBottomOf="@id/highScoreRecyclerView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/custom_blue_round_button"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"/>
</androidx.constraintlayout.widget.ConstraintLayout>